# microservices-with-ddd-kata

bounded-contexts/cpp/: CMakeLists.txt  Makefile  main.cpp
bounded-contexts/cpp/Dao/: IBook.h  IDvd.h
bounded-contexts/cpp/Entities/: Book.h  Dvd.h  IHasWeight.h  IItem.h  ItemId.h  Recipient.h  User.h
bounded-contexts/cpp/Services/Catalog/: Service.h
bounded-contexts/cpp/Services/Shipping/: Delivery.h
bounded-contexts/cpp/Services/ShoppingCart/: Cart.h  CartItem.h  CartService.h
bounded-contexts/dotnet/MyShop.Services/Shipping/: Cart.cs  CartItem.cs
bounded-contexts/node/: README.md  jest.config.js  package-lock.json  package.json
bounded-contexts/node/src/: app.module.ts  fake-data.ts
bounded-contexts/node/src/api/shipping-weight/: shipping-weight.controller.ts
bounded-contexts/node/src/dao/: book.dao.ts  dvd.dao.ts
bounded-contexts/node/src/entities/: book.ts  cart-Item.ts  cart.ts  dvd.ts  item-id.ts  quantity.ts  recipient.ts
bounded-contexts/node/src/main/: fake-data.ts
bounded-contexts/node/src/main/entities/: book.ts  cart-line.ts  (+6 more)
bounded-contexts/python/: mypy.ini  pyproject.toml
bounded-contexts/python/myshop/dao/: book_dao.py  dvd_dao.py
bounded-contexts/python/myshop/entities/: book.py  dvd.py  has_weight.py  item.py  item_id.py  quantity.py  recipient.py
bounded-contexts/python/myshop/services/: catalog.py  shipping.py  test_shipping.py
bounded-contexts/python/myshop/services/shipping/: service.py
bounded-contexts/python/myshop/services/shoppingcart/: cart.py  service.py
bounded-contexts/python/tests/: test_shipping.py
(+9 files in other folders)
