[tool.poetry]
name = "myshop"
version = "0.1.0"
description = ""
authors = ["Dimitri Merejkowsky <dimitri@dmerej.info>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
